# routes/api.php
@@ -5,8 +5,11 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\NotebookController;
 
-Route::get('/notebook', [NotebookController::class , 'index']);
-Route::post('/notebook', [NotebookController::class , 'store']);
-Route::get('/notebook/{id}', [NotebookController::class , 'show']);//Работает
-Route::post('/notebook/{id}', [NotebookController::class , 'update']);//Работает
-Route::delete('/notebook/{id}', [NotebookController::class , 'destroy']);//Работает
+
+Route::prefix('v1')->group(function () {
+    Route::get('/notebook', [NotebookController::class, 'index']);
+    Route::post('/notebook', [NotebookController::class, 'store']);
+    Route::get('/notebook/{id}', [NotebookController::class, 'show']);
+    Route::post('/notebook/{id}', [NotebookController::class, 'update']);
+    Route::delete('/notebook/{id}', [NotebookController::class, 'destroy']);
+});
